# aiogram-bot

./: .gitignore  README.md  main.py  pyproject.toml
bot/: bot.py
database/: connection.py  db_helper.py  models.py
parser/: itproger.py
