[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["DotVR46 <maggot8950@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
black = "^23.10.1"
aiohttp = "^3.8.6"
bs4 = "^0.0.1"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
